Incomplete minio in admin setup
Took 1 hour 6 minutes

--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -20,10 +20,12 @@ REACT_APP_SECRET_KEY=cogent-client-appointment-9844-2966
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
 REACT_APP_IP_TRACKER=6daaccd69e95248e55161273f1d6ff1d7d048ceef937015d4cb7a63c
-REACT_APP_MINIO_ACCESS_KEY=minioadmin
-REACT_APP_MINIO_SECRET_KEY=minioadmin
+
+# MINIO
+REACT_APP_MINIO_ACCESS_KEY=cogent-appointment
+REACT_APP_MINIO_SECRET_KEY=cogentappointment@123
 REACT_APP_MINIO_EXPIRY_TIME=60
-REACT_APP_MINIO_ENDPOINT=localhost
-REACT_APP_MINIO_SSL_FLAG=false
-REACT_APP_MINIO_PORT=9000
+REACT_APP_MINIO_ENDPOINT=https://uat-presigned.cogenthealth.com.np
+REACT_APP_MINIO_SSL_FLAG=true
 REACT_APP_MINIO_BUCKET=cogent-appointment
+
