--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "express": "4.17.1",
     "font-awesome": "^4.7.0",
     "griddle-react": "^1.13.1",
     "i": "^0.3.6",
@@ -92,7 +93,7 @@
     "lerna": "^3.15.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
-    "minio": "^7.0.16",
+    "minio": "7.0.16",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
