--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "lerna exec -- rimraf dist && lerna exec -- rimraf build && lerna clean --yes && rimraf node_modules",
     "admin": "yarn workspace @frontend-appointment/admin start",
     "client": "yarn workspace @frontend-appointment/client start",
-    "build": "yarn build:admin && yarn build:client"
+    "build": "yarn build:admin && yarn build:client",
+    "minio": "cd packages/apps/minio-server && node server.js"
   },
   "workspaces": {
     "packages": [
@@ -28,7 +29,8 @@
       "packages/redux-module",
       "packages/thunk-middleware",
       "packages/helpers",
-      "packages/web-resource-key-constants"
+      "packages/web-resource-key-constants",
+      "packages/minio-client"
     ],
     "nohoist": [
       "**/webpack-dev-server",
@@ -93,7 +95,6 @@
     "lerna": "^3.15.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
-    "minio": "7.0.17",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
