Change package.json name

--- a/packages/apps/minio-server/package.json
+++ b/packages/apps/minio-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minio-server",
+  "name": "@frontend-appointment/minio-server",
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
