--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "admin": "yarn workspace @frontend-appointment/admin start",
     "client": "yarn workspace @frontend-appointment/client start",
     "build": "yarn build:admin && yarn build:client",
-    "minio": "cd packages/apps/minio-server && node server.js"
+    "minio": "cd packages/apps/minio-server && node server.js",
+    "minio:build": "cd packages/apps/minio-server && yarn build"
   },
   "workspaces": {
     "packages": [
@@ -97,6 +98,7 @@
     "material-icons": "^0.3.1",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
+    "nexe": "^3.3.3",
     "node-sass": "^4.12.0",
     "npm": "^6.14.4",
     "prettier": "^1.16.1",
