--- a/packages/apps/minio-server/package.json
+++ b/packages/apps/minio-server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node server",
+    "build": "nexe --build"
+  },
   "dependencies": {
     "config": "^3.3.1",
     "minio": "^7.0.16"
