--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -249,24 +249,6 @@
           "childMenus": []
         },
         {
-          "id": 41,
-          "parentId": 10,
-          "name": " Department Appointment Status",
-          "path": "/appointment/appointmentStatusByDepartment",
-          "roles": [
-            12
-          ],
-          "icon": "",
-          "leftNavigation": "Y",
-          "checked": false,
-          "order": 1,
-          "enabled": "Y",
-          "menuFor": "6",
-          "description": "appointmentStatusBydepartment",
-          "childMenus": []
-        },
-
-        {
           "id": "12",
           "parentId": "10",
           "name": "Appointment Check-In",
@@ -289,9 +271,10 @@
           "id": "13",
           "parentId": "10",
           "name": "Appointment Status",
-          "path": "/appointment/appointmentStatus",
+          "path": "/appointment/status",
           "roles": [
-            12
+            27,
+            28
           ],
           "icon": "",
           "leftNavigation": "Y",
