--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -27,3 +27,4 @@ REACT_APP_MINIO_ENDPOINT=localhost
 REACT_APP_MINIO_SSL_FLAG=false
 REACT_APP_MINIO_PORT=9000
 REACT_APP_MINIO_BUCKET=cogent-appointment
+NODE_ENV=production
