--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -21,6 +21,7 @@ REACT_APP_SECRET_KEY=cogent-admin-appointment-9987-2287
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
 REACT_APP_IP_TRACKER=6daaccd69e95248e55161273f1d6ff1d7d048ceef937015d4cb7a63c
 
+REACT_APP_MINIO_SERVER_BASE_URL=http://localhost:8080
 # MINIO
 REACT_APP_MINIO_ACCESS_KEY=cogent-appointment
 REACT_APP_MINIO_SECRET_KEY=cogentappointment@123
