--- a/packages/apps/minio-server/package.json
+++ b/packages/apps/minio-server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "cors": "^2.8.5",
-    "minio": "^7.0.16"
+    "minio": "^7.0.16",
+    "compression": "^1.7.4"
   }
 }
