--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -329,6 +329,23 @@
           "menuFor": "6",
           "description": "appointmentStatus",
           "childMenus": []
+        },
+        {
+          "id": "30",
+          "parentId": "10",
+          "name": "Appointment Refund Status",
+          "path": "/appointment/refundStatus",
+          "roles": [
+            37,38
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "appointmentStatus",
+          "childMenus": []
         }
       ]
     },
