Add image upload from header of logged in admin
Took 1 hour 10 minutes

--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "main:src": "index.js",
-  "dependencies":{
+  "dependencies": {
     "@frontend-appointment/ui-elements": "1.0.0",
     "@frontend-appointment/helpers": "1.0.0",
     "@frontend-appointment/core": "1.0.0",
-    "@frontend-appointment/web-resource-key-constants": "1.0.0"
+    "@frontend-appointment/web-resource-key-constants": "1.0.0",
+    "@frontend-appointment/thunk-middleware": "1.0.0"
   }
 }
