--- a/packages/apps/client/package.json
+++ b/packages/apps/client/package.json
@@ -25,8 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "yarn run build",
-    "lint": "eslint ./src/**/*.js --max-warnings=0 --format=codeframe"
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "browserslist": {
     "production": [
