--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -24,5 +24,5 @@ REACT_APP_IP_TRACKER=6daaccd69e95248e55161273f1d6ff1d7d048ceef937015d4cb7a63c
 NODE_ENV=production
 
 # FILE UPLOAD LOCATIONS
-REACT_APP_CLIENT_PUBLIC_FILE_UPLOAD_LOCATION='public/client'
-REACT_APP_COMPANY_PUBLIC_FILE_UPLOAD_LOCATION='public/company'
+REACT_APP_CLIENT_PUBLIC_FILE_UPLOAD_LOCATION='private/client'
+REACT_APP_COMPANY_PUBLIC_FILE_UPLOAD_LOCATION='private/company'
