--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "rimraf": "^2.6.3",
     "secure-ls": "^1.2.6",
     "sinon": "^7.4.1",
-    "source-map-explorer": "^2.4.2",
+    "source-map-explorer": "^2.4.2"
   },
   "jest": {
     "collectCoverageFrom": [
