--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-storybook": "cd packages/storybook && build-storybook",
     "build:all": "concurrently --kill-others-on-fail \"yarn workspace @frontend-appointment/admin build\"",
     "build:admin": "GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/admin build",
-    "build:client": "GENERATE_SOURCEMAP=false && yarsn workspace @frontend-appointment/client build",
+    "build:client": "GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/client build",
     "clean": "lerna exec -- rimraf dist && lerna exec -- rimraf build && lerna clean --yes && rimraf node_modules",
     "admin": "yarn workspace @frontend-appointment/admin start",
     "client": "yarn workspace @frontend-appointment/client start",
@@ -42,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@ag-grid-community/all-modules": "23.2.1",
-    "@ag-grid-community/react": "23.2.1",
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/react": "^22.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
@@ -73,11 +73,12 @@
     "react-bootstrap": "^1.2.2",
     "chart.js": "^2.9.3",
     "typescript": "^3.9.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^3.1.3",
-    "react-dom": "^16.12.0",
     "react-dom-factories": "^1.0.2",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
