--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "bootstrap-switch-button-react": "^1.1.0",
+    "chart.js": "^2.9.3",
     "check-prop-types": "^1.1.2",
     "concurrently": "^5.0.2",
     "enzyme": "^3.11.0",
@@ -70,15 +71,13 @@
     "moxios": "^0.4.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react-bootstrap": "^1.2.2",
-    "chart.js": "^2.9.3",
-    "typescript": "^3.9.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react-bootstrap": "^1.2.2",
     "react-chartjs-2": "^2.9.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^3.1.3",
+    "react-dom": "^16.13.1",
     "react-dom-factories": "^1.0.2",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
@@ -97,7 +96,8 @@
     "rimraf": "^2.6.3",
     "secure-ls": "^1.2.6",
     "sinon": "^7.4.1",
-    "source-map-explorer": "^2.4.2"
+    "source-map-explorer": "^2.4.2",
+    "typescript": "^3.9.7"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -115,5 +115,8 @@
   "production": true,
   "development": true,
   "package-entry": "main:src",
-  "homepage": "."
+  "homepage": ".",
+  "dependencies": {
+    "react-loadable": "^5.5.0"
+  }
 }
