--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -26,3 +26,5 @@ NODE_ENV=production
 # FILE UPLOAD LOCATIONS
 REACT_APP_CLIENT_PUBLIC_FILE_UPLOAD_LOCATION='public/client'
 REACT_APP_COMPANY_PUBLIC_FILE_UPLOAD_LOCATION='public/company'
+REACT_APP_CLIENT_PRIVATE_FILE_UPLOAD_LOCATION='private/client'
+REACT_APP_COMPANY_PRIVATE_FILE_UPLOAD_LOCATION='private/company'
