--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest-prop-type-error": "^1.1.0",
     "jest-resolve": "^26.1.0",
     "lerna": "^3.22.1",
+    "material-icons": "^0.3.1",
     "moment": "^2.24.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.14.1",
