--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "secure-ls": "^1.2.6",
     "sinon": "^7.4.1",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "react-loadable": "^5.5.0"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -115,8 +116,5 @@
   "production": true,
   "development": true,
   "package-entry": "main:src",
-  "homepage": ".",
-  "dependencies": {
-    "react-loadable": "^5.5.0"
-  }
+  "homepage": "uat-admin.eappointments.net"
 }
