Fixed CancellationStatus In Appointment

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -293,7 +293,7 @@
         {
           "id": "45",
           "parentId": "10",
-          "name": "Appointment Refund Status",
+          "name": "Appointment Cancellation Status",
           "path": "/appointment/refundStatus",
           "roles": [
             19,
