--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -333,7 +333,7 @@
         {
           "id": "30",
           "parentId": "10",
-          "name": "Appointment Refund Status",
+          "name": "Appointment Cancellation Status",
           "path": "/appointment/refundStatus",
           "roles": [
             19,
