--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jest-prop-type-error": "^1.1.0",
     "jest-resolve": "^24.8.0",
     "jest-styled-components": "^6.3.3",
+    "jquery": "1.9.1",
     "lerna": "^3.15.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
