--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-icons": "^3.10.0",
     "react-image-crop": "^8.6.4",
     "react-images": "1.1.7",
+    "react-loadable": "^5.5.0",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -92,8 +93,7 @@
     "secure-ls": "^1.2.6",
     "sinon": "^7.4.1",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.7",
-    "react-loadable": "^5.5.0"
+    "typescript": "^3.9.7"
   },
   "jest": {
     "collectCoverageFrom": [
