add node-env in build command
Took 34 minutes

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "storybook": "cd packages/storybook && yarn storybook",
     "build-storybook": "cd packages/storybook && build-storybook",
     "build:all": "concurrently --kill-others-on-fail \"yarn workspace @frontend-appointment/admin build\"",
-    "build:admin": "GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/admin build",
-    "build:client": "GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/client build",
+    "build:admin": "cross-env NODE_ENV=production && GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/admin build",
+    "build:client": "cross-env NODE_ENV=production && GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/client build",
     "clean": "lerna exec -- rimraf dist && lerna exec -- rimraf build && lerna clean --yes && rimraf node_modules",
     "admin": "yarn workspace @frontend-appointment/admin start",
     "client": "yarn workspace @frontend-appointment/client start",
@@ -52,6 +52,7 @@
     "chart.js": "^2.9.3",
     "check-prop-types": "^1.1.2",
     "concurrently": "^5.0.2",
+    "cross-env": "6.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
