--- a/packages/apps/client/package.json
+++ b/packages/apps/client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm build/static/js/*.map && rm build/static/css/*.map ",
     "test": "react-scripts test",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "deploy": "serve -s build -l 5000"
   },
   "dependencies": {
     "@frontend-appointment/ui-components": "1.0.0",
