--- a/packages/apps/admin/package.json
+++ b/packages/apps/admin/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "yarn run build",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "deploy": "serve -s build -l 5001"
   },
   "dependencies": {
     "@frontend-appointment/ui-components": "1.0.0",
