--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -1,20 +1,20 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BACKEND_SERVER_DOMAIN=http://uat-clientapi.eappointments.net
-#REACT_APP_BACKEND_SERVER_DOMAIN=https://uat-clientapi-appointment.cogenthealth.com.np
+#REACT_APP_BACKEND_SERVER_DOMAIN=http://uat-clientapi.eappointments.net
+REACT_APP_BACKEND_SERVER_DOMAIN=https://uat-clientapi-appointment.cogenthealth.com.np/client
 REACT_APP_BASE_PATH_CODE=
 REACT_APP_MODULE_CODE=CLIENT
 REACT_APP_AUTH_TOKEN=c-auth-token
 
 # FOR LOGGING
-REACT_APP_LOGGING_SERVER_DOMAIN=http://uat-loggingapi.eappointments.net
-#REACT_APP_LOGGING_SERVER_DOMAIN=https://uat-loggingapi.appointment.cogenthealth.com.np
+#REACT_APP_LOGGING_SERVER_DOMAIN=http://uat-loggingapi.eappointments.net
+REACT_APP_LOGGING_SERVER_DOMAIN=https://uat-loggingapi.appointment.cogenthealth.com.np/logging
 REACT_APP_LOGGING_BASE=/logging
 
 # FOR EMAIL LINK- TO SET URL FOR PASSWORD SAVE PAGE
-REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=http://uat-admin.eappointments.net
-#REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=https://uat-admin-appointment.cogenthealth.com.np
-REACT_APP_CLIENT_FRONTEND_EMAIL_REDIRECT_URL=http://uat-client.eappointments.net
-#REACT_APP_CLIENT_FRONTEND_EMAIL_REDIRECT_URL=https://uat-client-appointment.cogenthealth.com.np
+#REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=http://uat-admin.eappointments.net
+REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=https://uat-admin-appointment.cogenthealth.com.np
+#REACT_APP_CLIENT_FRONTEND_EMAIL_REDIRECT_URL=http://uat-client.eappointments.net
+REACT_APP_CLIENT_FRONTEND_EMAIL_REDIRECT_URL=https://uat-client-appointment.cogenthealth.com.np
 # PORTS TO BE REMOVED
 REACT_APP_FRONTEND_ADMIN_PORT=3301
 REACT_APP_FRONTEND_CLIENT_PORT=3302
